# libcupp_proposal

./: CMakeLists.txt  README.md  main.cu
cuda/: algorithm  numeric
cuda/detail/: __reduce
